--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="adaptive.css">
+
 </head>
 <body>
     <div class="background1">
@@ -20,6 +22,20 @@
     </div>
     <div class="background3">
 
+    </div>
+    <div class="background4">
+        <div class="background4__left">
+
+        </div>
+        <div class="background4__right">
+
+        </div>
+    </div>
+    <div class="background5">
+
+    </div>
+    <div class="background__footer">
+        <span>CD PROJEKT®, Cyberpunk®, Cyberpunk 2077®</span>
     </div>
     <div class="wrapper">
         <div class="header">
@@ -89,8 +105,8 @@
                                 </button>
                             </div>
                             <div class="lower__left__buttons__second">
-                                <button></button>
-                                <span>Согласен на обработку персональных данных</span>
+                                <input type="checkbox" id="check"> 
+                                <label for="check">Согласен на обработку персональных данных</label>
                             </div>
                         </div>
                     </div>
@@ -136,8 +152,73 @@
                     </div>
                 </div>
             </div>
+            <div class="section4">
+                <div class="section4__left">
+
+                </div>
+                <div class="section4__right">
+                    <div class="section4__right__upper">
+                        <h2>Купить игру<br>Cyberpunk 2077</h2>
+                    </div>
+                    <div class="section4__right__center">
+                        <a href="" style="color: #52bedc; text-decoration: none; font-size: 18px;">В комплект входит:</a>
+                        <div class="section4__right__center__text1">
+                            <div class="section4__right__center__text1__left">
+                                
+                            </div>
+                            <div class="section4__right__center__text1__right">
+                                Футляр с игровыми дисками
+                            </div>
+                        </div>
+                        <div class="section4__right__center__text2">
+                            <div class="section4__right__center__text2__left">
+
+                            </div>
+                            <div class="section4__right__center__text2__right">
+                                Футляр с кодом для загрузки игры и дисками (pc)
+                            </div>
+                        </div>
+                        <div class="section4__right__center__text3">
+                            <div class="section4__right__center__text3__left">
+
+                            </div>
+                            <div class="section4__right__center__text3_right">
+                                Справочник с информацией об игровом мире
+                            </div>
+                        </div>
+                        <a href="" style="color: #52bedc; text-decoration: none; font-size: 18px;">Выберите платформу:</a>
+                    </div>
+                    <div class="section4__right__lower">
+                        <div class="section4__right__lower__left">
+                            <div class="section4__right__lower__left__ico1">
+
+                            </div>
+                            <div class="section4__right__lower__left__ico2"></div>
+                        </div>
+                        <div class="section4__right__lower__right">
+                            <div class="section4__right__lower__right__ico1">
+
+                            </div>
+                            <div class="section4__right__lower__right__ico2">
+                                
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="section5">
+                <div class="section5__left">
+                    <button class="btn1"></button>
+                    <button class="btn2"></button>
+                </div>
+                <div class="section5__right">
+                    <a href="" class="link1" style="color: black; text-decoration: none; cursor: pointer; text-decoration: underline;">Лицензия</a>
+                    <a href="" class="link2" style="color: black; text-decoration: none; cursor: pointer; text-decoration: underline;">Политика конфиденциальности</a>
+                </div>
+            </div>
         </div>
-        <div class="footer"></div>
+        <div class="footer">
+        </div>
     </div>
 </body>
 </html>
